--- a/.env
+++ b/.env
@@ -5,21 +5,21 @@
 ##############################
 
 # This is where you put YOUR phone number
-NUMBER_TO_TEXT=
+NUMBER_TO_TEXT=+13038865120
 
 # This is where you put the number Twilio generates for you
-TWILIO_NUMBER=
+TWILIO_NUMBER=+13035006870
 
 # This is your twilio account config
-TWILIO_ACCOUNT=
-TWILIO_TOKEN=
+TWILIO_ACCOUNT=AC76dad3c9c0c9dcf04b8e00338920814a
+TWILIO_TOKEN=6af2eee2461045108f2f397d39443edd
 
 #########################
 #### General Configs ####
 #########################
 
 # Add a comma delimited list of URL's you'd like to crawl
-URL_TO_SEARCH=
+URL_TO_SEARCH=https://www.snkrs.com/en/
 
 # This is how frequently we'd like to crawl, in milleseconds
-CHECK_INTERVAL_MS
+CHECK_INTERVAL_MS=30000
