--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ TWILIO_TOKEN=6af2eee2461045108f2f397d39443edd
 #########################
 
 # Add a comma delimited list of URL's you'd like to crawl
-URL_TO_SEARCH=https://www.snkrs.com/en/
+URL_TO_SEARCH=https://www.zillow.com/homes/80207_rb/
 
 # This is how frequently we'd like to crawl, in milleseconds
-CHECK_INTERVAL_MS=30000
+CHECK_INTERVAL_MS=600000
